+ (Core) Updated the UI to keep the Reminder Modal from disappearing on small screens. (Fixes #5531)

--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -1211,7 +1211,8 @@ td.grid-actions {
     }
 
     .zone-content > .reminder-links {
-      right: 44px
+      right: 44px;
+      z-index: 10;
     }
   }
 }
